--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@
 
 # Hardware Interface Libraries
 pyserial>=3.5
-RPi.GPIO>=0.7.1
+# RPi.GPIO>=0.7.1
 
 # Adafruit CircuitPython Libraries for Sensors
 adafruit-circuitpython-mpu6050>=1.1.15
